--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "normalize.css": "^8.0.1",
     "vue": "^2.5.11",
     "vuex": "^3.1.1"
   },
